--- a/html/m_detail_finance.html
+++ b/html/m_detail_finance.html
@@ -39,8 +39,8 @@
 				<div id="strategy" class="detail-html"></div>
 			</div>
 			<div class="taste nav-contact">
-				<a class="contact" target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=34f2461e64f2fb28ac36d1eab0d303760c68cdff632c46f62bd8abda313e30dc">加入QQ群</a>
-				<a class="contact" target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=122142551&site=qq&menu=yes">联系客服</a>
+				<a class="contact-qq" target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=34f2461e64f2fb28ac36d1eab0d303760c68cdff632c46f62bd8abda313e30dc">加入QQ群</a>
+				<a class="contact-qq" target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=122142551&site=qq&menu=yes">联系客服</a>
 			</div>
 			<div class="taste">
 				<h3 class="reward"><i class="iconfont">&#xe613;</i>奖励规则</h3>
