--- a/m_finance.html
+++ b/m_finance.html
@@ -112,7 +112,7 @@
 									var li = document.createElement('li');
 									li.className = 'mui-table-view-cell';
 									li.innerHTML = '<a class="clearfix" data_id="' + wel.id + '" href="' + wel.url + '"><div class="title"><strong>' + wel.title +
-										'</strong><span>官网利息：<font>' + wel.interest + '</font></span></div>' +
+										'</strong><span>标签</span><span>小标签</span></div>' +
 										'<div class="container clearfix">' +
 										'<div><img src="' + host + wel.picurl + '" /><span class="mark">' + wel.category + '</span>' +
 										'</div><div class="inc2"><p>官网利息：<number>' + wel.interest + '</number></p>' +
