--- a/html/m_detail_finance.html
+++ b/html/m_detail_finance.html
@@ -17,31 +17,22 @@
 			<div class="top">
 				<img id="picture" src="../images/blank.jpg">
 				<div class="top-content">
-					<p class="finance-mark"><span>小标签</span><span>小标签</span><span>小标签</span></p>
+					<p id="marks" class="finance-mark"></p>
 					<div id="text_box" class="text-box">
-						<p id="intro" class="introduction">介绍这里是产品简单介绍介绍这里是产品简单介绍介绍这里简单介绍介介绍这里是产品简单介绍介绍这里是产品简单介绍介绍这里简单介绍介介绍这里是产品简单介绍介绍这里是产品简单介绍介绍这里简单介绍介介绍这里是产品简单介绍介绍这里是产品简单介绍介绍这里简单介绍介介绍这里是产品简单介绍介绍这里是产品简单介绍介绍这里简单介绍介绍这里是产品简单介绍介绍这里是产品简单介绍介绍这里简单介绍</p>
+						<p id="intro" class="introduction"></p>
 					</div>
 				</div>
 			</div>
 			<div class="info">
-				<p><span>平台背景</span><span>民营系</span></p>
-				<p><span>注册资本</span><span>1000万</span></p>
-				<p><span>上线时间</span><span>2017-01-12</span></p>
-				<p><span>是否银行存管</span><span>是</span></p>
-				<p><span>ICP号</span><span>12345678</span></p>
+				<p><span>平台背景</span><span id="background"></span></p>
+				<p><span>注册资本</span><span id="regcap"></span></p>
+				<p><span>上线时间</span><span id="onlinedate"></span></p>
+				<p><span>是否银行存管</span><span id='depository'></span></p>
+				<p><span>ICP号</span><span id="ICP"></span></p>
 			</div>
-			<div class="taste finance-table">
+			<div id="scheme_table" class="taste finance-table">
 				<div class="table-head">
 					<span>投资金融</span><span>投资期限</span><span>挖福利返现</span><span>综合年化收益</span>
-				</div>
-				<div class="table-list">
-					<span>一万及以上</span><span>30天</span><span>投资金额*1.05%</span><span>25.00%</span>
-				</div>
-				<div class="table-list">
-					<span>二万及以上</span><span>30天</span><span>投资金额*1.05%</span><span>25.00%</span>
-				</div>
-				<div class="table-list">
-					<span>三万及以上</span><span>30天</span><span>投资金额*1.05%</span><span>25.00%</span>
 				</div>
 			</div>
 			<!--体验步骤部分-->
@@ -57,16 +48,6 @@
 				<h3 class="reward"><i class="iconfont">&#xe613;</i>奖励规则</h3>
 				<div id="rules" class="detail-html"></div>
 			</div>
-			<!--温馨提示部分-->
-			<!--<div class="prompt">
-				<h3><i class="iconfont">&#xe60b;</i>温馨提示</h3>
-				<p><number>1、</number>为了让您畅快的享受福利，请您务必按照体验步骤详情操作，并在完成后返回本页面<span style="color:#ff6767">提交相关数据</span>，以便工作人员进行数据审核，发放相应福利；</p>
-				<p><number>2、</number>用户提交数据后，挖福利工作人员将在48小时内完成审核，并发放相应奖励至用户账户；</p>
-				<p><number>3、</number>用户赚取的福币可在个人中心以100：1的比例兑换成现金并提现至支付宝账户（100个福币兑换成1元现金）； 积分则可在积分商城兑换相应的奖品；</p>
-				<p><number>4、</number>投资有风险，入市需谨慎；挖福利尽最大可能的提供最优质的理财渠道、筛选有诚信的合作平台，但是挖福利不对合作平台提供任何的风险担保；</p>
-				<p><number>5、</number>挖福利对福利数据的审核具有最终解释权。</p>
-				<p class="contact">如有疑问请联系<strong>在线客服</strong>或拨打 <strong>服务热线：0734-8344414</strong></p>
-			</div>-->
 			<!--立即体验部分-->
 			<div class="mui-row">
 				<div class="left-btn mui-col-sm-6 mui-col-xs-6">
@@ -78,22 +59,12 @@
 			</div>
 
 		</div>
-		<!--弹出二维码部分-->
-		<div id="ding_yue" class="er-wei-ma weixin-box-00">
-			<div class="box">
-				<span id="close_01" class="mui-icon mui-icon-close"></span>
-				<p>长安识别图中二维码</p>
-				<img id="erweima_img" />
-				<p id="erweima_title"></p>
-			</div>
-		</div>
 
 		<script src="../js/mui.js"></script>
 		<script src="../js/UserInfo.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			mui.init();
 			var id = '';
-			var ismobile = false;
 			var exp_url = '';
 			var self = null;
 			var tempview = null;
@@ -129,14 +100,34 @@
 							mui.alert(ret.msg);
 						} else {
 							var info = ret.financeinfo;
-							ismobile = info.ismobile;
+							document.getElementById('intro').innerText = info.introduction;
+							document.getElementById('background').innerText = info.background;
+							document.getElementById('regcap').innerText = info.regcap;
+							document.getElementById('onlinedate').innerText = info.onlinedate;
+							document.getElementById('depository').innerText = info.depository;
+							document.getElementById('ICP').innerText = info.ICP;
 							document.getElementById('strategy').innerHTML = info.strategy;
 							document.getElementById('rules').innerHTML = info.rules;
-							if(ismobile) {
-								document.getElementById('erweima_img').src = info.url;
-								document.getElementById('erweima_title').src = info.title;
-							} else {
-								exp_url = info.url;
+							exp_url = info.url;
+							var mark_cont = document.getElementById("marks");
+							var mark_list = info.marks;
+							for (var i=0;i<mark_list.length;i++){
+								var li = document.createElement('span');
+								li.innerText = mark_list[i];
+								mark_cont.appendChild(li);
+							}
+							var scheme = info.scheme;
+							var table = document.getElementById("scheme_table");
+							for (var i=0;i<scheme.length;i++){
+								var item = scheme[i];
+								var str_html = '';
+								var li = document.createElement('div');
+								li.className = 'table-list';
+								for(var j=0;j<item.length;j++){
+									str_html += '<span>' + item[j] + '</span>';
+								}
+								li.innerHTML = str_html;
+								table.appendChild(li);
 							}
 							if(info.state == '1') {
 								exp_btn.disabled = false;
@@ -167,9 +158,6 @@
 					browserWebview.loadURL(exp_url);
 					browserMainWebview.show('pop-in', 200);
 				}
-			});
-			document.getElementById("close_01").addEventListener('tap', function() {
-				document.getElementById("ding_yue").style.display = "none";
 			});
 			reg_btn.addEventListener('tap', function() {
 				var sub_url = "m_expsubmit_finance.html";
