--- a/html/m_detail_finance.html
+++ b/html/m_detail_finance.html
@@ -11,9 +11,6 @@
 
 	<body>
 		<div class="mui-content">
-			<!--<div class="ad">
-				<img id="picture" src="../images/blank.jpg">
-			</div>-->
 			<div class="top">
 				<img id="picture" src="../images/blank.jpg">
 				<div class="top-content">
@@ -46,7 +43,7 @@
 			</div>
 			<!--体验步骤部分-->
 			<div class="taste-02">
-				<h3><i class="iconfont">&#xe61c;</i>体验步骤</h3>
+				<h3><i class="iconfont">&#xe61c;</i>投资流程</h3>
 				<div id="strategy" class="detail-html"></div>
 			</div>
 			<div class="taste nav-contact">
@@ -54,19 +51,9 @@
 				<a class="contact-qq" target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=122142551&site=qq&menu=yes">联系客服</a>
 			</div>
 			<div class="taste">
-				<h3 class="reward"><i class="iconfont">&#xe613;</i>奖励规则</h3>
+				<h3 class="reward"><i class="iconfont">&#xe613;</i>注意事项</h3>
 				<div id="rules" class="detail-html"></div>
 			</div>
-			<!--温馨提示部分-->
-			<!--<div class="prompt">
-				<h3><i class="iconfont">&#xe60b;</i>温馨提示</h3>
-				<p><number>1、</number>为了让您畅快的享受福利，请您务必按照体验步骤详情操作，并在完成后返回本页面<span style="color:#ff6767">提交相关数据</span>，以便工作人员进行数据审核，发放相应福利；</p>
-				<p><number>2、</number>用户提交数据后，挖福利工作人员将在48小时内完成审核，并发放相应奖励至用户账户；</p>
-				<p><number>3、</number>用户赚取的福币可在个人中心以100：1的比例兑换成现金并提现至支付宝账户（100个福币兑换成1元现金）； 积分则可在积分商城兑换相应的奖品；</p>
-				<p><number>4、</number>投资有风险，入市需谨慎；挖福利尽最大可能的提供最优质的理财渠道、筛选有诚信的合作平台，但是挖福利不对合作平台提供任何的风险担保；</p>
-				<p><number>5、</number>挖福利对福利数据的审核具有最终解释权。</p>
-				<p class="contact">如有疑问请联系<strong>在线客服</strong>或拨打 <strong>服务热线：0734-8344414</strong></p>
-			</div>-->
 			<!--立即体验部分-->
 			<div class="mui-row">
 				<div class="left-btn mui-col-sm-6 mui-col-xs-6">
@@ -78,15 +65,7 @@
 			</div>
 
 		</div>
-		<!--弹出二维码部分-->
-		<div id="ding_yue" class="er-wei-ma weixin-box-00">
-			<div class="box">
-				<span id="close_01" class="mui-icon mui-icon-close"></span>
-				<p>长安识别图中二维码</p>
-				<img id="erweima_img" />
-				<p id="erweima_title"></p>
-			</div>
-		</div>
+
 
 		<script src="../js/mui.js"></script>
 		<script src="../js/UserInfo.js"></script>
