--- a/m_account_index.html
+++ b/m_account_index.html
@@ -29,12 +29,12 @@
 			<ul id="middle" class="mui-row row-middle">
 				<li class="first mui-table-view-cell mui-col-sm-4 mui-col-xs-4">
 					<a>
-						累计收益（元）<br /><br /><span><number id="accu_income"></number></span>
+						累计收益(福币)<br /><br /><span><number id="accu_income"></number></span>
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-col-sm-4 mui-col-xs-4">
 					<a>
-						现金余额（元）<br /><br /><span><number id="balance"></number></span>
+						剩余福币(个)<br /><br /><span><number id="balance"></number></span>
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-col-sm-4 mui-col-xs-4">
@@ -45,56 +45,61 @@
 			</ul>
 
 			<ul class="mui-row row-bottom">
-				<li class="mui-table-view-cell mui-col-sm-4 mui-col-xs-4">
+				<li class="mui-table-view-cell mui-col-sm-3 mui-col-xs-3">
 					<a class="icon-url" href="account/m_account_withdraw.html">
 						<i class="icon iconfont">&#xe627;</i>
 						<p>提现</p>
 					</a>
 				</li>
 
-				<li class="mui-table-view-cell mui-col-sm-4 mui-col-xs-4">
-					<a class="icon-url" href="account/m_account_bind_zhifubao.html">
-						<i class="icon iconfont">&#xe635;</i>
-						<p>支付宝绑定</p>
-					</a>
-				</li>
-
-				<li class="mui-table-view-cell mui-col-sm-4 mui-col-xs-4">
+				<li class="mui-table-view-cell mui-col-sm-3 mui-col-xs-3">
 					<a class="icon-url" href="account/m_account_charge.html">
 						<i class="icon iconfont">&#xe632;</i>
 						<p>福币管理</p>
 					</a>
 				</li>
-				<li class="mui-table-view-cell mui-col-sm-4 mui-col-xs-4">
+				<li class="mui-table-view-cell mui-col-sm-3 mui-col-xs-3">
 					<a class="icon-url" href="account/m_account_score.html">
 						<i class="icon iconfont">&#xe60c;</i>
 						<p>积分管理</p>
 					</a>
 				</li>
 
-				<li class="mui-table-view-cell mui-col-sm-4 mui-col-xs-4">
+				<li class="mui-table-view-cell mui-col-sm-3 mui-col-xs-3">
 					<a class="icon-url" href="account/m_account_welfare.html">
 						<i class="icon iconfont">&#xe651;</i>
 						<p>福利管理</p>
 					</a>
 				</li>
-				<li class="mui-table-view-cell mui-col-sm-4 mui-col-xs-4">
+				<li class="mui-table-view-cell mui-col-sm-3 mui-col-xs-3">
 					<a class="icon-url" href="account/m_account_coupon.html">
 						<i class="icon iconfont">&#xe611;</i>
 						<p>优惠券管理</p>
 					</a>
 				</li>
 
-				<li class="mui-table-view-cell mui-col-sm-4 mui-col-xs-4">
+				<li class="mui-table-view-cell mui-col-sm-3 mui-col-xs-3">
 					<a class="icon-url" href="account/m_strategy.html">
 						<i class="icon iconfont">&#xe630;</i>
 						<p>挖福利攻略</p>
 					</a>
 				</li>
-				<li class="mui-table-view-cell mui-col-sm-4 mui-col-xs-4">
+				<li class="mui-table-view-cell mui-col-sm-3 mui-col-xs-3">
 					<a class="icon-url" href="account/m_account_invite.html">
 						<i class="icon iconfont">&#xe664;</i>
 						<p>邀请好友</p>
+					</a>
+				</li>
+				<li class="mui-table-view-cell mui-col-sm-3 mui-col-xs-3">
+					<a class="icon-url" target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=34f2461e64f2fb28ac36d1eab0d303760c68cdff632c46f62bd8abda313e30dc">
+						<i class="icon iconfont" target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=122142551&site=qq&menu=yes">&#xe62e;</i>
+						<p>加入QQ群</p>
+					</a>
+				</li>
+				<li class="mui-table-view-cell mui-col-sm-3 mui-col-xs-3">
+					<a class="icon-url" target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=122142551&site=qq&menu=yes">
+						<i class="icon iconfont">&#xe643;</i>
+						<p>QQ客服</p>
 					</a>
 				</li>
 
