--- a/m_finance.html
+++ b/m_finance.html
@@ -17,7 +17,6 @@
 					<a class="mui-control-item" href="#item1">最新</a>
 					<a class="mui-control-item" href="#item2">高收益</a>
 					<a class="mui-control-item" href="#item3">低风险</a>
-					<!--<a class="mui-control-item" href="#item5">优惠券</a>-->
 				</div>
 				<div id="sliderProgressBar" class="mui-slider-progress-bar mui-col-xs-4"></div>
 				<div class="mui-slider-group">
@@ -117,7 +116,7 @@
 										str_block += '<span>' + marks[j] + '</span>';
 									}
 									str_block += '</div><div class="container clearfix">'+
-											'<div><img src="' + wel.picurl + '" /><span class="mark">' + wel.category + '</span>'+
+											'<div><img src="' + wel.picurl + '" />'+
 											'</div><div class="inc2">'+
 						                    '<p>官网利息：<number>'+wel.interest+'</number></p>'+
 						                    '<p>补贴收益：<number>+' + wel.benefit +
