--- a/m_account_index.html
+++ b/m_account_index.html
@@ -34,7 +34,7 @@
 				</li>
 				<li class="mui-table-view-cell mui-col-sm-4 mui-col-xs-4">
 					<a>
-						剩余福币(个)<br /><br /><span><number id="balance"></number></span>
+						剩余福币<br /><br /><span><number id="balance"></number></span>
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-col-sm-4 mui-col-xs-4">
