--- a/html/m_detail_finance.html
+++ b/html/m_detail_finance.html
@@ -24,7 +24,7 @@
 				<p><span>平台背景</span><span id="background"></span></p>
 				<p><span>注册资本</span><span id="regcap"></span></p>
 				<p><span>上线时间</span><span id="onlinedate"></span></p>
-				<p><span>是否银行存管</span><span id='depository'></span></p>
+				<p><span>银行存管机构</span><span id='depository'></span></p>
 				<p><span>ICP号</span><span id="ICP"></span></p>
 			</div>
 			<div id="scheme_table" class="taste finance-table">
@@ -41,6 +41,16 @@
 			<div class="taste">
 				<h3 class="reward"><i class="iconfont">&#xe613;</i>注意事项</h3>
 				<div id="rules" class="detail-html"></div>
+			</div>
+			<!--温馨提示部分-->
+			<div class="kind-prompt">
+				<h5>温馨提示</h5>
+				<div class="prompt-text">					
+					<p><number>1、</number>请您务必按照“投资流程”操作，并在完成后返回本页面提交相关数据，以便进行审核与发放相应福利；</p>
+					<p><number>2、</number>福币可在个人中心以100：1的比例兑换成现金并提现至支付宝账户；</p>
+					<p><number>3、</number>挖福利尽最大可能的提供最优质的理财渠道、筛选有诚信的合作平台，但是挖福利不对合作平台提供任何的风险担保；</p>
+				</div>
+				<p>如有疑问请联系在线客服或拨打服务热线：0734-8344414</p>
 			</div>
 			<!--立即体验部分-->
 			<div class="mui-row">
