--- a/m_account_index.html
+++ b/m_account_index.html
@@ -91,16 +91,16 @@
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-col-sm-3 mui-col-xs-3">
-					<a class="icon-url" target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=34f2461e64f2fb28ac36d1eab0d303760c68cdff632c46f62bd8abda313e30dc">
+					<div class="icon-url" target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=34f2461e64f2fb28ac36d1eab0d303760c68cdff632c46f62bd8abda313e30dc">
 						<i class="icon iconfont" target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=122142551&site=qq&menu=yes">&#xe62e;</i>
 						<p>加入QQ群</p>
-					</a>
+					</div>
 				</li>
 				<li class="mui-table-view-cell mui-col-sm-3 mui-col-xs-3">
-					<a class="icon-url" target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=122142551&site=qq&menu=yes">
+					<div class="icon-url" target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=122142551&site=qq&menu=yes">
 						<i class="icon iconfont">&#xe643;</i>
 						<p>QQ客服</p>
-					</a>
+					</div>
 				</li>
 
 			</ul>
